--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "http-status-codes": "^2.3.0",
     "mongoose": "^8.2.4",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0"
