--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-session": "^1.18.1",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "memorystore": "^1.6.7",
     "mongoose": "^8.2.4",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
