--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.1",
-    "express-session": "^1.18.1",
+    "express-session": "^1.18.2",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "memorystore": "^1.6.7",
     "mongoose": "^8.2.4",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
